I wrote a paragraph and made a heading

--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <script src="script.js"></script>
-  </body>
-</html>
+<html lang="en-CA">
+<body>
+ <h1>Heading 1</h1>
+ <p style="color:blue;">This is a blue paragraph.</p>
+ <p>
+   A flower, sometimes known as a bloom or blossom, is the reproductive structure found in flowering plants. The biological function of a flower is to facilitate reproduction
+ </p>  
