--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-CA">
-<body>
+<body
  <h1>Heading 1</h1>
  <p style="color:blue;">This is a blue paragraph.</p>
  <p>
