fixed some errors.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-CA">
+<html lang="en-CA"
 <body
  <h1>Heading 1</h1>
  <p style="color:blue;">This is a blue paragraph.</p>
