--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-CA"
-<bod
+<body
  <p style="color:blue;">This is a blue paragraph.</p>
  <p>
    A flower, sometimes known as a bloom or blossom, is the reproductive structure found in flowering plants. The biological function of a flower is to facilitate reproduction
